# Pipes

./: .gitignore  CMakeLists.txt
MtLib/: CMakeLists.txt
MtLib/inc/MtLib/: cpipe.h  csemaphore.h  lbs_pipe.h  posix_semaphore.h  spinlock_pipe.h
MtLib/inc/mt/: cpipe.h  lbs_pipe.h  lbs_qpipe.h
MtLib/src/: posix_semaphore.cpp
NsLib/: CMakeLists.txt
NsLib/inc/NsLib/: atomic_ring.h  ring.h
demo/: CMakeLists.txt
demo/Downscaler/: CMakeLists.txt
demo/Downscaler/src/: downscaler.cpp
inc/: cpp20_semaphore.h  cpp_semaphore.h  deque_pipe.h  pipe.h  read_pipe.h  ring.h  ring2.h  ring2_pipe.h  ring_pipe.h  warehouse.h  write_pipe.h
src/: cpp20_semaphore.cpp  cpp_semaphore.cpp  main.cpp
